objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AVA__AVAAI_action_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This lead requires some action be taken by a rep</description>
        <inlineHelpText>This lead requires some action be taken by a rep</inlineHelpText>
        <label>Conversica Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_action_required_date__c</fullName>
        <description>The date and time it was determined action is required</description>
        <inlineHelpText>The date and time it was determined action is required</inlineHelpText>
        <label>Conversica Action Required Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_1__c</fullName>
        <description>The contact&apos;s phone number as verified or discovered by Conversica</description>
        <inlineHelpText>The contact&apos;s phone number as verified or discovered by Conversica</inlineHelpText>
        <label>Conversica Confirmed Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_2__c</fullName>
        <description>The contact&apos;s phone number as verified or discovered by Conversica</description>
        <inlineHelpText>The contact&apos;s phone number as verified or discovered by Conversica</inlineHelpText>
        <label>Conversica Confirmed Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage__c</fullName>
        <description>The current stage of the Conversica Conversation</description>
        <inlineHelpText>The current stage of the Conversica Conversation</inlineHelpText>
        <label>Conversation Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage_date__c</fullName>
        <description>The date and time the current Conversation Stage changed</description>
        <inlineHelpText>The date and time the current Conversation Stage changed</inlineHelpText>
        <label>Conversation Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status__c</fullName>
        <description>The current status of the Conversica Conversation</description>
        <inlineHelpText>The current status of the Conversica Conversation</inlineHelpText>
        <label>Conversation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_date__c</fullName>
        <description>The date and time the current Conversation Status was set</description>
        <inlineHelpText>The date and time the current Conversation Status was set</inlineHelpText>
        <label>Conversation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail__c</fullName>
        <label>Deprecated Conversation Status Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail_date__c</fullName>
        <label>Deprecated Status Detail Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status__c</fullName>
        <description>The current status of the contact in Conversica</description>
        <inlineHelpText>The current status of the contact in Conversica</inlineHelpText>
        <label>Conversica Lead Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status_date__c</fullName>
        <description>The date and time the current Conversation status was set</description>
        <inlineHelpText>The date and time the current Conversation status was set</inlineHelpText>
        <label>Conversica Lead Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_date_added__c</fullName>
        <description>The date and time Conversica received the lead</description>
        <inlineHelpText>The date and time Conversica received the lead</inlineHelpText>
        <label>Conversica Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_1__c</fullName>
        <description>If a new email address is discovered in a Contact’s response, this field will be populated with the additional email address.</description>
        <inlineHelpText>If a new email address is discovered in a Contact’s response, this field will be populated with the additional email address.</inlineHelpText>
        <label>Conversica Discovered Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_2__c</fullName>
        <description>If a second new email address is discovered in a Contact’s response, this field will be populated with the additional email address.</description>
        <inlineHelpText>If a second new email address is discovered in a Contact’s response, this field will be populated with the additional email address.</inlineHelpText>
        <label>Conversica Discovered Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_name__c</fullName>
        <description>If a new first name is discovered in a Contact’s response, this field will be populated with the preferred first name.</description>
        <inlineHelpText>If a new first name is discovered in a Contact’s response, this field will be populated with the preferred first name.</inlineHelpText>
        <label>Conversica Discovered Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_first_message_date__c</fullName>
        <description>The date and time Conversica first sent a message to the contact</description>
        <inlineHelpText>The date and time Conversica first sent a message to the contact</inlineHelpText>
        <label>Conversica First Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Contact is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</description>
        <inlineHelpText>Checked if the Contact is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</inlineHelpText>
        <label>Conversica Further Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action_date__c</fullName>
        <description>Date and time the Contact became a Conversica Further Action lead.</description>
        <inlineHelpText>Date and time the Contact became a Conversica Further Action lead.</inlineHelpText>
        <label>Conversica Further Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The contact is ready to be contacted by a rep</description>
        <inlineHelpText>The contact is ready to be contacted by a rep</inlineHelpText>
        <label>Conversica Hot Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead_date__c</fullName>
        <description>The date and time the contact became &quot;Hot&quot; in Conversica</description>
        <inlineHelpText>The date and time the contact became &quot;Hot&quot; in Conversica</inlineHelpText>
        <label>Conversica Hot Lead Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_message_date__c</fullName>
        <description>The date and time Conversica last sent a message to the contact</description>
        <inlineHelpText>The date and time Conversica last sent a message to the contact</inlineHelpText>
        <label>Conversica Last Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_response_date__c</fullName>
        <description>The date and time Conversica last received a response from the contact</description>
        <inlineHelpText>The date and time Conversica last received a response from the contact</inlineHelpText>
        <label>Conversica Last Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The contact may lose interest if not contacted soon by a rep</description>
        <inlineHelpText>The contact  may lose interest if not contacted soon by a rep</inlineHelpText>
        <label>Conversica Lead At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk_date__c</fullName>
        <description>The date and time the contact became &quot;At Risk&quot; in Conversica</description>
        <inlineHelpText>The date and time the contact became &quot;At Risk&quot; in Conversica</inlineHelpText>
        <label>Conversica Lead At Risk Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_profile__c</fullName>
        <description>A link to the Conversica Lead Profile page for the selected Contact.</description>
        <inlineHelpText>A link to the Conversica Lead Profile page for the selected Contact.</inlineHelpText>
        <label>Conversica Lead Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_options__c</fullName>
        <description>Options field for this object in Conversica</description>
        <inlineHelpText>Options field for this object in Conversica</inlineHelpText>
        <label>Conversica Options</label>
        <picklist>
            <picklistValues>
                <fullName>Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip to follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_score__c</fullName>
        <description>The Conversica Score of an Conversica lead.</description>
        <label>Deprecated Conversica Score</label>
        <picklist>
            <picklistValues>
                <fullName>Grey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_sms_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Contact indicates they would no longer like to be messaged via SMS after having previously opted in.</description>
        <inlineHelpText>Checked if the Contact indicates they would no longer like to be messaged via SMS after having previously opted in.</inlineHelpText>
        <label>Conversica SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_status__c</fullName>
        <description>Status of an Conversica lead in the Conversica system</description>
        <label>Deprecated Conversica Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excluded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undeliverable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVA Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversica Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparing Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Appt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Appt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messaging Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_Code_Expiration__c</fullName>
        <label>Access Code Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Access_Code__c</fullName>
        <label>Access Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__Number_In_Use__c</fullName>
        <description>For Twilio SMS record level setting</description>
        <label>Number In Use</label>
        <picklist>
            <picklistValues>
                <fullName>MobilePhone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi_Twilio__SMS_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_sheet_Portal_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Control sheet Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DialSource__DS_Owner_ID__c</fullName>
        <description>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</description>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</inlineHelpText>
        <label>DS Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Datetime_of_Last_Disposition_DS__c</fullName>
        <description>Time stamp of when the last Disposition was clicked</description>
        <inlineHelpText>Time stamp of when the last Disposition was clicked</inlineHelpText>
        <label>Datetime of Last Disposition</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Call_Campaign_Name__c</fullName>
        <description>Name of the Call Campaign the record was last called from</description>
        <inlineHelpText>Name of the Call Campaign the record was last called from</inlineHelpText>
        <label>Last Call Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Disposition_DS__c</fullName>
        <description>Name of the last Disposition clicked</description>
        <inlineHelpText>Name of the last Disposition clicked</inlineHelpText>
        <label>Last Disposition</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Next_Call_DS__c</fullName>
        <description>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</description>
        <inlineHelpText>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</inlineHelpText>
        <label>Next Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Total_Call_Count_DS__c</fullName>
        <description>Total number of calls made on this record</description>
        <inlineHelpText>Total number of calls made on this record</inlineHelpText>
        <label>Total Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <label>Last Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_count__c</fullName>
        <description>The number of times this record has been assigned via Distribution Engine</description>
        <inlineHelpText>The number of times this record has been assigned via Distribution Engine</inlineHelpText>
        <label>Distribution count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is distributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is reassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_distributed__c</fullName>
        <label>Date last distributed to user</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_reassigned__c</fullName>
        <label>Date last auto reassigned</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Cloufi__Lender</fullName>
        <active>true</active>
        <label>Lender</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cloufi__Merchant</fullName>
        <active>true</active>
        <label>Merchant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cloufi__Referral_Partner</fullName>
        <active>true</active>
        <label>Referral Partner</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>